--- a/src/components/SimpleTodos/index.css
+++ b/src/components/SimpleTodos/index.css
@@ -1,33 +1,50 @@
 /* Write your CSS here */
-.bg-container {
+.app-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #ffc2a0;
-  padding: 20px;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  min-height: 100vh;
+}
+
+.simple-todos-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  background-color: #ffffff;
+  border-radius: 16px;
+  width: 90%;
+  padding: 24px;
+  margin-top: 48px;
+  margin-bottom: 48px;
+  max-width: 1110px;
 }
-.card-container {
-  background-color: antiquewhite;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Roboto';
-  padding: 20px;
-  border-radius: 12px;
-  width: 100%;
+
+@media screen and (min-width: 768px) {
+  .simple-todos-container {
+    padding: 48px;
+    margin-top: 96px;
+    margin-bottom: 96px;
+  }
 }
+
 .heading {
   color: #ff8542;
-  font-size: 32px;
+  font-family: 'Roboto';
+  font-size: 24px;
+  font-weight: 700;
+  margin-top: 12px;
+  margin-bottom: 16px;
 }
-.ul-container {
-  list-style-type: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  flex-wrap: 1;
+
+@media screen and (min-width: 768px) {
+  .heading {
+    font-size: 48px;
+    margin-top: 32px;
+    margin-bottom: 48px;
+  }
+}
+
+.todos-list {
+  padding-left: 0px;
 }
