--- a/src/components/TodoItem/index.css
+++ b/src/components/TodoItem/index.css
@@ -1,21 +1,47 @@
 /* Write your CSS here */
-.li-container {
+.todo-item {
   display: flex;
   justify-content: space-between;
-  flex-grow: 1;
+  align-items: center;
+  list-style-type: none;
 }
-.para {
+
+.title {
   color: #000000;
   font-family: 'Roboto';
-  font-size: 18px;
+  font-size: 16px;
 }
-.button {
-  cursor: pointer;
-  outline: none;
-  padding: 3px;
+
+@media screen and (min-width: 768px) {
+  .title {
+    font-size: 24px;
+  }
+}
+
+.delete-btn {
+  background-color: #ffffff;
   color: #ff0b37;
-  border-radius: 6px;
+  font-family: 'Roboto';
+  font-size: 12px;
+  border-radius: 8px;
   border: 1px solid #ff0b37;
-  height: 30px;
-  width: 80px;
+  padding-top: 4px;
+  padding-left: 8px;
+  padding-bottom: 4px;
+  padding-right: 8px;
+  margin-left: 16px;
+  outline: none;
+  cursor: pointer;
 }
+
+@media screen and (min-width: 768px) {
+  .delete-btn {
+    font-size: 18px;
+    padding-top: 8px;
+    padding-left: 16px;
+    padding-bottom: 8px;
+    padding-right: 16px;
+    margin-left: 32px;
+  }
+}
+
